snow-tails/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;600&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

nav {
  font-family: "poppins", sans-serif;
  font-size: small;
  font-weight: 300;
}

body {
  font-family: "poppins", sans-serif;
  margin-top: -50px; /* Moves all the content slightly above due to navbar white space */
}

html {
  scroll-behavior: smooth;
}
.nav-active {
  font-weight: bold;
  position: relative;

  /* underline effect with transition */
  &::after {
    content: "";
    display: block;
    position: absolute;
    bottom: -2px; /* thickness of underline */
    left: 0;
    width: 40%;
    height: 2px; /* height of underline */
    background-color: red;
    transform: scaleX(0);
    transform-origin: 0% 50%;
    transition: transform 0.3s ease;
  }

  /* Apply the underline when active */
  &:hover::after,
  &::after {
    transform: scaleX(1);
  }
}

